# IRL-

./: .gitignore  MANIFEST.in  README.md  demo.irl  generate_quiz.py  gta_text.txt  gta_text_main.txt  parse_gta.py  pyproject.toml  update_all.py
irl/: __init__.py  bones.py  city.py  console.py  creative.py  doctor.py  dog.py  extract.py  games.py  glasses.py  grass.py  gta_data.py  install.py  joke.py  main.py  manga.py  manga_offline.py  quiz_bank.py  run.py  search.py  state.py  store.py  story.py  wrappers.py
irl-vscode/: language-configuration.json  package.json
irl-vscode/snippets/: snippets.json
irl-vscode/syntaxes/: irl.tmLanguage.json
irl/themes/: __init__.py  base.py  engine.py  layouts.py  story_content.py  tones.py
irl_lang/: __main__.py  interpreter.py  lexer.py  parser.py
