[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "irl-pkg"
version = "1.1.4"
description = "A creative toolkit for developers."
authors = [
    { name = "UNKNOWN™" }
]
dependencies = [
    "requests",
    "rich"
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
irl = "irl.main:cli"
